Updated demo notebook

--- a/examples/hposuite_demo.ipynb
+++ b/examples/hposuite_demo.ipynb
@@ -9,20 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'ackley': <hpoglue.benchmark.FunctionalBenchmark object at 0x7128de376d70>}\n",
-      "{'RandomSearch': <class 'lib.optimizers.random_search.RandomSearch'>}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from lib import BENCHMARKS, OPTIMIZERS\n",
+    "from hposuite.benchmarks import BENCHMARKS\n",
+    "from hposuite.optimizers import OPTIMIZERS\n",
     "\n",
     "print(BENCHMARKS)\n",
     "print(OPTIMIZERS)"
@@ -34,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "benchmark = BENCHMARKS[\"ackley\"]\n",
+    "benchmark = (BENCHMARKS[\"ackley\"], {\"objectives\": \"y\"})\n",
     "optimizer = OPTIMIZERS[\"RandomSearch\"]"
    ]
   },
@@ -46,15 +38,16 @@
    "source": [
     "from hposuite import create_study\n",
     "\n",
-    "study = create_study(name=\"hposuite_demo\")\n",
-    "\n",
-    "study.optimize(\n",
+    "study = create_study(\n",
+    "    name=\"hposuite_demo\",\n",
+    "    output_dir=\"../../hposuite-output\",\n",
     "    optimizers=optimizer,\n",
     "    benchmarks=benchmark,\n",
     "    num_seeds=5,\n",
     "    budget=100,\n",
-    "    exec_type=\"sequential\",\n",
-    ")"
+    ")\n",
+    "\n",
+    "study.optimize(overwrite=True)"
    ]
   }
  ],
