Modified notebook with examples

--- a/examples/hposuite_demo.ipynb
+++ b/examples/hposuite_demo.ipynb
@@ -9,25 +9,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Ex_Functional_Bench': <hpoglue.benchmark.FunctionalBenchmark object at 0x6fff6c16e2c0>}\n",
+      "{'RandomSearch': <class 'lib.optimizers.random_search.RandomSearch'>, 'Multifidelity_Opt_Example': <class 'lib.optimizers.ex_multifidelity.Ex_Multifidelity'>}\n"
+     ]
+    }
+   ],
    "source": [
-    "from hposuite.benchmarks import BENCHMARKS\n",
-    "from hposuite.optimizers import OPTIMIZERS\n",
+    "from lib.benchmarks import BENCHMARKS\n",
+    "from lib.optimizers import OPTIMIZERS\n",
     "\n",
     "print(BENCHMARKS)\n",
     "print(OPTIMIZERS)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Running Random Search on a Functional Benchmark (eg: ACKLEY)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "benchmark = (BENCHMARKS[\"ackley\"], {\"objectives\": \"y\"})\n",
-    "optimizer = OPTIMIZERS[\"RandomSearch\"]"
+    "func_benchmark = BENCHMARKS[\"Ex_Functional_Bench\"]\n",
+    "rs = OPTIMIZERS[\"RandomSearch\"]"
    ]
   },
   {
@@ -41,8 +57,45 @@
     "study = create_study(\n",
     "    name=\"hposuite_demo\",\n",
     "    output_dir=\"../../hposuite-output\",\n",
-    "    optimizers=optimizer,\n",
-    "    benchmarks=benchmark,\n",
+    "    optimizers=rs,\n",
+    "    benchmarks=func_benchmark,\n",
+    "    num_seeds=5,\n",
+    "    budget=100,\n",
+    ")\n",
+    "\n",
+    "study.optimize(overwrite=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Running a MultiFidelity Optimizer (eg: Hyperband) on a Surrogate Benchmark (eg: PD1 Cifar100 Wide Resnet 2048)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sg_benchmark = BENCHMARKS[\"Ex_Surrogate_Bench\"]\n",
+    "mf_optimizer = OPTIMIZERS[\"Ex_Multifidelity_Opt\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from hposuite import create_study\n",
+    "\n",
+    "study = create_study(\n",
+    "    name=\"hposuite_demo\",\n",
+    "    output_dir=\"../../hposuite-output\",\n",
+    "    optimizers=mf_optimizer,\n",
+    "    benchmarks=sg_benchmark,\n",
     "    num_seeds=5,\n",
     "    budget=100,\n",
     ")\n",
