--- a/examples/hposuite_demo.ipynb
+++ b/examples/hposuite_demo.ipynb
@@ -9,19 +9,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Ex_Functional_Bench': <hpoglue.benchmark.FunctionalBenchmark object at 0x6fff6c16e2c0>}\n",
-      "{'RandomSearch': <class 'lib.optimizers.random_search.RandomSearch'>, 'Multifidelity_Opt_Example': <class 'lib.optimizers.ex_multifidelity.Ex_Multifidelity'>}\n"
+      "/home/soham/repos/hposuite/data\n",
+      "{'Ex_Functional_Bench': <hpoglue.benchmark.FunctionalBenchmark object at 0x77edcc1862f0>, 'Ex_Surrogate_Bench': BenchmarkDescription(name='Ex_Surrogate_Bench', config_space=Configuration space object:\n",
+      "  Hyperparameters:\n",
+      "    lr_decay_factor, Type: UniformFloat, Range: [0.010093, 0.989012], Default: 0.4995525\n",
+      "    lr_initial, Type: UniformFloat, Range: [1e-05, 9.779176], Default: 0.0098889716351, on log-scale\n",
+      "    lr_power, Type: UniformFloat, Range: [0.100708, 1.999376], Default: 1.050042\n",
+      "    opt_momentum, Type: UniformFloat, Range: [5.9e-05, 0.998993], Default: 0.0076772773169, on log-scale\n",
+      ", load=functools.partial(<function _get_surrogate_benchmark at 0x77edcc181b40>, benchmark_name='cifar100_wideresnet_2048', datadir=PosixPath('/home/soham/repos/hposuite/data')), metrics={'valid_error_rate': Measure(minimize=True, kind=<Kind.METRIC: 'metric'>, bounds=(0, 1))}, test_metrics=None, costs={'train_cost': Measure(minimize=True, kind=<Kind.COST: 'cost'>, bounds=(0, inf))}, fidelities={'epoch': RangeFidelity(kind=<class 'int'>, min=1, max=199, stepsize=1, supports_continuation=True)}, has_conditionals=False, is_tabular=False, env=Env(name='py310-mfpbench-1.9-pd1'), mem_req_mb=12288)}\n",
+      "{'RandomSearch': <class 'lib.optimizers.random_search.RandomSearch'>, 'Ex_Multifidelity_Opt': <class 'lib.optimizers.ex_multifidelity_opt.Ex_Multifidelity_Opt'>}\n"
      ]
     }
    ],
    "source": [
+    "# It is assumed that the datadir is hposuite/data\n",
+    "\n",
     "from lib.benchmarks import BENCHMARKS\n",
     "from lib.optimizers import OPTIMIZERS\n",
     "\n",
@@ -35,6 +44,13 @@
    "source": [
     "## Running Random Search on a Functional Benchmark (eg: ACKLEY)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -75,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
