--- a/examples/hposuite_demo.ipynb
+++ b/examples/hposuite_demo.ipynb
@@ -9,89 +9,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Ex_Functional_Bench': <hpoglue.benchmark.FunctionalBenchmark object at 0x78df76de4040>, 'Ex_Surrogate_Bench': BenchmarkDescription(name='Ex_Surrogate_Bench', config_space=Configuration space object:\n",
-      "  Hyperparameters:\n",
-      "    lr_decay_factor, Type: UniformFloat, Range: [0.010093, 0.989012], Default: 0.4995525\n",
-      "    lr_initial, Type: UniformFloat, Range: [1e-05, 9.779176], Default: 0.0098889716351, on log-scale\n",
-      "    lr_power, Type: UniformFloat, Range: [0.100708, 1.999376], Default: 1.050042\n",
-      "    opt_momentum, Type: UniformFloat, Range: [5.9e-05, 0.998993], Default: 0.0076772773169, on log-scale\n",
-      ", load=functools.partial(<function _get_surrogate_benchmark at 0x78df76dd11b0>, benchmark_name='cifar100_wideresnet_2048', datadir=PosixPath('/home/soham/repos/hposuite/data/pd1')), metrics={'valid_error_rate': Measure(minimize=True, kind=<Kind.METRIC: 'metric'>, bounds=(0, 1))}, test_metrics=None, costs={'train_cost': Measure(minimize=True, kind=<Kind.COST: 'cost'>, bounds=(0, inf))}, fidelities={'epoch': RangeFidelity(kind=<class 'int'>, min=1, max=199, stepsize=1, supports_continuation=True)}, has_conditionals=False, is_tabular=False, env=Env(name='py310-mfpbench-1.9-pd1'), mem_req_mb=12288, predefined_points=None, extra={}), 'mfh3_bad': BenchmarkDescription(name='mfh3_bad', config_space=Configuration space object:\n",
-      "  Hyperparameters:\n",
-      "mfh3_bad\n",
-      "    X_0, Type: UniformFloat, Range: [0.0, 1.0], Default: 0.5\n",
-      "    X_1, Type: UniformFloat, Range: [0.0, 1.0], Default: 0.5\n",
-      "    X_2, Type: UniformFloat, Range: [0.0, 1.0], Default: 0.5\n",
-      ", load=functools.partial(<function _get_surrogate_benchmark at 0x78df76dd1480>, benchmark_name='mfh3_bad'), metrics={'value': Measure(minimize=True, kind=<Kind.METRIC: 'metric'>, bounds=(-3.32237, inf))}, test_metrics=None, costs={'fid_cost': Measure(minimize=True, kind=<Kind.COST: 'cost'>, bounds=(0.05, 1))}, fidelities={'z': RangeFidelity(kind=<class 'int'>, min=1, max=100, stepsize=1, supports_continuation=True)}, has_conditionals=False, is_tabular=False, env=Env(name='py310-mfpbench-1.9-mfh'), mem_req_mb=1024, predefined_points=None, extra={}), 'mfh6_bad': BenchmarkDescription(name='mfh6_bad', config_space=Configuration space object:\n",
-      "  Hyperparameters:\n",
-      "mfh6_bad\n",
-      "    X_0, Type: UniformFloat, Range: [0.0, 1.0], Default: 0.5\n",
-      "    X_1, Type: UniformFloat, Range: [0.0, 1.0], Default: 0.5\n",
-      "    X_2, Type: UniformFloat, Range: [0.0, 1.0], Default: 0.5\n",
-      "    X_3, Type: UniformFloat, Range: [0.0, 1.0], Default: 0.5\n",
-      "    X_4, Type: UniformFloat, Range: [0.0, 1.0], Default: 0.5\n",
-      "    X_5, Type: UniformFloat, Range: [0.0, 1.0], Default: 0.5\n",
-      ", load=functools.partial(<function _get_surrogate_benchmark at 0x78df76dd1480>, benchmark_name='mfh6_bad'), metrics={'value': Measure(minimize=True, kind=<Kind.METRIC: 'metric'>, bounds=(-3.86278, inf))}, test_metrics=None, costs={'fid_cost': Measure(minimize=True, kind=<Kind.COST: 'cost'>, bounds=(0.05, 1))}, fidelities={'z': RangeFidelity(kind=<class 'int'>, min=1, max=100, stepsize=1, supports_continuation=True)}, has_conditionals=False, is_tabular=False, env=Env(name='py310-mfpbench-1.9-mfh'), mem_req_mb=1024, predefined_points=None, extra={}), 'mfh3_good': BenchmarkDescription(name='mfh3_good', config_space=Configuration space object:\n",
-      "  Hyperparameters:\n",
-      "mfh3_good\n",
-      "    X_0, Type: UniformFloat, Range: [0.0, 1.0], Default: 0.5\n",
-      "    X_1, Type: UniformFloat, Range: [0.0, 1.0], Default: 0.5\n",
-      "    X_2, Type: UniformFloat, Range: [0.0, 1.0], Default: 0.5\n",
-      ", load=functools.partial(<function _get_surrogate_benchmark at 0x78df76dd1480>, benchmark_name='mfh3_good'), metrics={'value': Measure(minimize=True, kind=<Kind.METRIC: 'metric'>, bounds=(-3.32237, inf))}, test_metrics=None, costs={'fid_cost': Measure(minimize=True, kind=<Kind.COST: 'cost'>, bounds=(0.05, 1))}, fidelities={'z': RangeFidelity(kind=<class 'int'>, min=1, max=100, stepsize=1, supports_continuation=True)}, has_conditionals=False, is_tabular=False, env=Env(name='py310-mfpbench-1.9-mfh'), mem_req_mb=1024, predefined_points=None, extra={}), 'mfh6_good': BenchmarkDescription(name='mfh6_good', config_space=Configuration space object:\n",
-      "  Hyperparameters:\n",
-      "mfh6_good\n",
-      "    X_0, Type: UniformFloat, Range: [0.0, 1.0], Default: 0.5\n",
-      "    X_1, Type: UniformFloat, Range: [0.0, 1.0], Default: 0.5\n",
-      "    X_2, Type: UniformFloat, Range: [0.0, 1.0], Default: 0.5\n",
-      "    X_3, Type: UniformFloat, Range: [0.0, 1.0], Default: 0.5\n",
-      "    X_4, Type: UniformFloat, Range: [0.0, 1.0], Default: 0.5\n",
-      "    X_5, Type: UniformFloat, Range: [0.0, 1.0], Default: 0.5\n",
-      ", load=functools.partial(<function _get_surrogate_benchmark at 0x78df76dd1480>, benchmark_name='mfh6_good'), metrics={'value': Measure(minimize=True, kind=<Kind.METRIC: 'metric'>, bounds=(-3.86278, inf))}, test_metrics=None, costs={'fid_cost': Measure(minimize=True, kind=<Kind.COST: 'cost'>, bounds=(0.05, 1))}, fidelities={'z': RangeFidelity(kind=<class 'int'>, min=1, max=100, stepsize=1, supports_continuation=True)}, has_conditionals=False, is_tabular=False, env=Env(name='py310-mfpbench-1.9-mfh'), mem_req_mb=1024, predefined_points=None, extra={}), 'mfh3_moderate': BenchmarkDescription(name='mfh3_moderate', config_space=Configuration space object:\n",
-      "  Hyperparameters:\n",
-      "mfh3_moderate\n",
-      "    X_0, Type: UniformFloat, Range: [0.0, 1.0], Default: 0.5\n",
-      "    X_1, Type: UniformFloat, Range: [0.0, 1.0], Default: 0.5\n",
-      "    X_2, Type: UniformFloat, Range: [0.0, 1.0], Default: 0.5\n",
-      ", load=functools.partial(<function _get_surrogate_benchmark at 0x78df76dd1480>, benchmark_name='mfh3_moderate'), metrics={'value': Measure(minimize=True, kind=<Kind.METRIC: 'metric'>, bounds=(-3.32237, inf))}, test_metrics=None, costs={'fid_cost': Measure(minimize=True, kind=<Kind.COST: 'cost'>, bounds=(0.05, 1))}, fidelities={'z': RangeFidelity(kind=<class 'int'>, min=1, max=100, stepsize=1, supports_continuation=True)}, has_conditionals=False, is_tabular=False, env=Env(name='py310-mfpbench-1.9-mfh'), mem_req_mb=1024, predefined_points=None, extra={}), 'mfh6_moderate': BenchmarkDescription(name='mfh6_moderate', config_space=Configuration space object:\n",
-      "  Hyperparameters:\n",
-      "mfh6_moderate\n",
-      "    X_0, Type: UniformFloat, Range: [0.0, 1.0], Default: 0.5\n",
-      "    X_1, Type: UniformFloat, Range: [0.0, 1.0], Default: 0.5\n",
-      "    X_2, Type: UniformFloat, Range: [0.0, 1.0], Default: 0.5\n",
-      "    X_3, Type: UniformFloat, Range: [0.0, 1.0], Default: 0.5\n",
-      "    X_4, Type: UniformFloat, Range: [0.0, 1.0], Default: 0.5\n",
-      "    X_5, Type: UniformFloat, Range: [0.0, 1.0], Default: 0.5\n",
-      ", load=functools.partial(<function _get_surrogate_benchmark at 0x78df76dd1480>, benchmark_name='mfh6_moderate'), metrics={'value': Measure(minimize=True, kind=<Kind.METRIC: 'metric'>, bounds=(-3.86278, inf))}, test_metrics=None, costs={'fid_cost': Measure(minimize=True, kind=<Kind.COST: 'cost'>, bounds=(0.05, 1))}, fidelities={'z': RangeFidelity(kind=<class 'int'>, min=1, max=100, stepsize=1, supports_continuation=True)}, has_conditionals=False, is_tabular=False, env=Env(name='py310-mfpbench-1.9-mfh'), mem_req_mb=1024, predefined_points=None, extra={}), 'mfh3_terrible': BenchmarkDescription(name='mfh3_terrible', config_space=Configuration space object:\n",
-      "  Hyperparameters:\n",
-      "mfh3_terrible\n",
-      "    X_0, Type: UniformFloat, Range: [0.0, 1.0], Default: 0.5\n",
-      "    X_1, Type: UniformFloat, Range: [0.0, 1.0], Default: 0.5\n",
-      "    X_2, Type: UniformFloat, Range: [0.0, 1.0], Default: 0.5\n",
-      ", load=functools.partial(<function _get_surrogate_benchmark at 0x78df76dd1480>, benchmark_name='mfh3_terrible'), metrics={'value': Measure(minimize=True, kind=<Kind.METRIC: 'metric'>, bounds=(-3.32237, inf))}, test_metrics=None, costs={'fid_cost': Measure(minimize=True, kind=<Kind.COST: 'cost'>, bounds=(0.05, 1))}, fidelities={'z': RangeFidelity(kind=<class 'int'>, min=1, max=100, stepsize=1, supports_continuation=True)}, has_conditionals=False, is_tabular=False, env=Env(name='py310-mfpbench-1.9-mfh'), mem_req_mb=1024, predefined_points=None, extra={}), 'mfh6_terrible': BenchmarkDescription(name='mfh6_terrible', config_space=Configuration space object:\n",
-      "  Hyperparameters:\n",
-      "mfh6_terrible\n",
-      "    X_0, Type: UniformFloat, Range: [0.0, 1.0], Default: 0.5\n",
-      "    X_1, Type: UniformFloat, Range: [0.0, 1.0], Default: 0.5\n",
-      "    X_2, Type: UniformFloat, Range: [0.0, 1.0], Default: 0.5\n",
-      "    X_3, Type: UniformFloat, Range: [0.0, 1.0], Default: 0.5\n",
-      "    X_4, Type: UniformFloat, Range: [0.0, 1.0], Default: 0.5\n",
-      "    X_5, Type: UniformFloat, Range: [0.0, 1.0], Default: 0.5\n",
-      ", load=functools.partial(<function _get_surrogate_benchmark at 0x78df76dd1480>, benchmark_name='mfh6_terrible'), metrics={'value': Measure(minimize=True, kind=<Kind.METRIC: 'metric'>, bounds=(-3.86278, inf))}, test_metrics=None, costs={'fid_cost': Measure(minimize=True, kind=<Kind.COST: 'cost'>, bounds=(0.05, 1))}, fidelities={'z': RangeFidelity(kind=<class 'int'>, min=1, max=100, stepsize=1, supports_continuation=True)}, has_conditionals=False, is_tabular=False, env=Env(name='py310-mfpbench-1.9-mfh'), mem_req_mb=1024, predefined_points=None, extra={})}\n",
-      "{'RandomSearch': <class 'lib.optimizers.random_search.RandomSearch'>, 'RandomSearchWithPriors': <class 'lib.optimizers.random_search.RandomSearchWithPriors'>, 'Ex_MO_Opt': <class 'lib.optimizers.ex_mo_opt.Ex_MO_Opt'>, 'Ex_Multifidelity_Opt': <class 'lib.optimizers.ex_multifidelity_opt.Ex_Multifidelity_Opt'>, 'Ex_Blackbox_Opt': <class 'lib.optimizers.ex_blackbox_opt.Ex_Blackbox_Opt'>}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/soham/repos/envs/hposuite_env/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
+      "dict_keys(['Ex_Functional_Bench', 'Ex_Surrogate_Bench', 'mfh3_bad', 'mfh6_bad', 'mfh3_good', 'mfh6_good', 'mfh3_moderate', 'mfh6_moderate', 'mfh3_terrible', 'mfh6_terrible'])\n",
+      "dict_keys(['RandomSearch', 'RandomSearchWithPriors', 'Ex_MO_Opt', 'Ex_Multifidelity_Opt', 'Ex_Blackbox_Opt'])\n"
      ]
     }
    ],
@@ -101,8 +27,8 @@
     "from lib.benchmarks import BENCHMARKS\n",
     "from lib.optimizers import OPTIMIZERS\n",
     "\n",
-    "print(BENCHMARKS)\n",
-    "print(OPTIMIZERS)"
+    "print(BENCHMARKS.keys())\n",
+    "print(OPTIMIZERS.keys())"
    ]
   },
   {
@@ -357,12 +283,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "mo_optimizer = OPTIMIZERS[\"Ex_MO_Opt\"]\n",
     "mo_benchmark = BENCHMARKS[\"Ex_Surrogate_Bench\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Printing the description of the Example Surrogate benchmark and its available list of objectives"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BenchmarkDescription(name='Ex_Surrogate_Bench', config_space=Configuration space object:\n",
+      "  Hyperparameters:\n",
+      "    lr_decay_factor, Type: UniformFloat, Range: [0.010093, 0.989012], Default: 0.4995525\n",
+      "    lr_initial, Type: UniformFloat, Range: [1e-05, 9.779176], Default: 0.0098889716351, on log-scale\n",
+      "    lr_power, Type: UniformFloat, Range: [0.100708, 1.999376], Default: 1.050042\n",
+      "    opt_momentum, Type: UniformFloat, Range: [5.9e-05, 0.998993], Default: 0.0076772773169, on log-scale\n",
+      ", load=functools.partial(<function _get_surrogate_benchmark at 0x7c6b22e15240>, benchmark_name='cifar100_wideresnet_2048', datadir=PosixPath('/home/soham/repos/hposuite/data/pd1')), metrics={'valid_error_rate': Measure(minimize=True, kind=<Kind.METRIC: 'metric'>, bounds=(0, 1))}, test_metrics=None, costs={'train_cost': Measure(minimize=True, kind=<Kind.COST: 'cost'>, bounds=(0, inf))}, fidelities={'epoch': RangeFidelity(kind=<class 'int'>, min=1, max=199, stepsize=1, supports_continuation=True)}, has_conditionals=False, is_tabular=False, env=Env(name='py310-mfpbench-1.9-pd1'), mem_req_mb=12288, predefined_points=None, extra={})\n",
+      "dict_keys(['valid_error_rate']) dict_keys(['train_cost'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mo_benchmark)\n",
+    "print(mo_benchmark.metrics.keys(), mo_benchmark.costs.keys()) # We can use both the metrics and costs as objectives"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Running Optuna NSGA2 on the Surrogate Benchmark"
    ]
   },
   {
