--- a/examples/plots_and_comparisons.ipynb
+++ b/examples/plots_and_comparisons.ipynb
@@ -212,7 +212,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For this example we use the SMAC Hyperband on the PD1 Cifar100 Wide Resnet 2048 Benchmark \\\n",
+    "For this example we use the DEHB on the PD1 Cifar100 Wide Resnet 2048 Benchmark \\\n",
     "In hposuite, continuations is set to True by default for each run, unless the optimizer doesn't support it. In that case, it automatically gets set to False."
    ]
   },
